[project]
name = "comfyui-mask-util"
description = "Nodes:Split Masks, Mask Selection Of Masks, Mask Region Info"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/longgui0318/comfyui-mask-util"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "longgui0318"
DisplayName = "comfyui-mask-util"
Icon = ""
